# 2022-JLU-SE-Cpracticum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_dev.md  main.cpp
Data/: LinearReggression.txt
Data/ClientChainData/: ClientData.txt
Data/CommodityChainData/: CommodityData.txt
Data/LoginData/: AdminData.txt  UserData.txt
Data/RecordChainData/: RecordData_backup.txt  feedback.txt
Documents/: 题签.docx
Headfiles/: CartChain.h  ChainOpt.h  ClientChain.h  CommodityChain.h  GetTime.h  GraphPage.h  InputCheck.h  LinearRegression.h  MD5.h  RecordChain.h  StrSimilar.h  loginFunction.h
Sources/: CartChain.cpp  ChainOpt.cpp  ClientChain.cpp  CommodityChain.cpp  GraphPage.cpp  GteTime.cpp  InputCheck.cpp  MD5.cpp  RecordChain.cpp  StrSimilar.cpp  loginFunction.cpp
